ms_templater/deployment/infrastructure/eks/integration.yaml
################## Request Authentication ###########################
### Define el método de autenticación soportado en este caso es JWT ###

apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-validator-ms-templater
  namespace: #{namespace}#
spec:
  selector:
    matchLabels:
      pod: #{name}#-pod
  jwtRules:
    - issuer: #{user-pool-url}#
      jwksUri: #{user-pool-id-url}#


---
###################   Authorization Policy ###################################
## Habilita el control de acceso a los servicios que cumplen las condiciones #

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwt-validator-policy-ms-templater
  namespace: #{namespace}#
spec:
  selector:
    matchLabels:
      pod: #{name}#-pod
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
    - to:
        - operation:
            hosts:
              - #{gateway-host}#
              - #{gateway-host-smoke}#
